# Firebreak

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: GradeCircle.tsx  ScanModal.tsx  SeverityBadge.tsx
frontend/src/pages/: Dashboard.tsx  FindingDetail.tsx  ScanDetail.tsx
knowledge/best-practices/: api-auth.md  database-security.md  dependency-management.md  docker-security.md  error-handling.md  logging-security.md  oauth-security.md  secrets-management.md  session-management.md  websocket-security.md
src/: main.rs
src/engine/: checks.rs  crawler.rs  mod.rs
src/rls/: mod.rs
src/tools/: analysis.rs  mod.rs  scan.rs
src/tools/knowledge/: best_practices.rs  check_pattern.rs  checklist.rs  owasp.rs
src/vcvd/: data.rs
